--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,8 @@
   --hero-bgc-color: #c4c4c4;
   --network-color: #afb1b8;
   --skills-bgc-position: rgba(47, 48, 58, 0.8);
+  --form-border-color: rgba(33, 33, 33, 0.2);
+  --placeholder-color: rgba(117, 117, 117, 0.5);
 
   --backdrop: rgba(0, 0, 0, 0.2);
   --thumb-overlay-color: rgba(33, 150, 243, 0.9);
@@ -286,27 +288,105 @@ a {
 }
 
 .modal-thumb {
-  display: flex;
   width: 100%;
-  height: 342px;
+  height: 100%;
   padding-left: 40px;
   padding-right: 40px;
+  margin-bottom: 20px;
 }
 
-.modal-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.modal-paragraph {
+/* .modal-form .modal-paragraph {
   margin-top: 0;
   margin-bottom: 12px;
   padding-top: 40px;
+} */
+
+.modal-paragraph {
+  margin-top: 46px;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+}
+
+.field-form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.field-form label {
+  margin-bottom: 4px;
+
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+}
+
+.field-form input {
+  margin: 0;
+  border-radius: 4px;
+  border: 1px solid var(--form-border-color);
+}
+
+.field-form textarea {
+  padding: 12px 16px;
+  border-radius: 4px;
+  border: 1px solid var(--form-border-color);
+}
+
+.field-form textarea::placeholder {
+  color: var(--placeholder-color);
+
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
 }
 
 textarea {
   resize: none;
+}
+
+.button-container {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.button-form {
+  padding: 10px 55px 10px 56px;
+
+  border-style: none;
+  outline: none;
+  cursor: pointer;
+
+  background-color: var(--accent-color);
+  color: var(--white-hero-color);
+
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.agreement-box {
+  margin: 0;
+  margin-bottom: 30px;
+  padding-left: 54px;
+  padding-right: 51px;
+}
+
+.agreement-box label {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 /* main container for all project */
@@ -876,7 +956,8 @@ textarea {
 }
 
 /* футер  - join */
-.footer-join {
+.footer-join,
+.mailing {
   margin: 0 0 20px 0;
 
   font-weight: bold;
@@ -939,6 +1020,22 @@ textarea {
 
 .join-margin:last-child {
   margin-right: 0;
+}
+
+/* Подписаться на рассылку */
+
+.mailing-form {
+  width: 358px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  color: var(--transparent-gray);
+}
+
+.mailing-flex {
+  display: flex;
+  flex-direction: column;
 }
 
 /* geometry styles */
