--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
   --skills-bgc-position: rgba(47, 48, 58, 0.8);
   --form-border-color: rgba(33, 33, 33, 0.2);
   --placeholder-color: rgba(117, 117, 117, 0.5);
+  --border-mailing-color: rgba(255, 255, 255, 0.3);
 
   --backdrop: rgba(0, 0, 0, 0.2);
   --thumb-overlay-color: rgba(33, 150, 243, 0.9);
@@ -294,12 +295,6 @@ a {
   padding-right: 40px;
   margin-bottom: 20px;
 }
-
-/* .modal-form .modal-paragraph {
-  margin-top: 0;
-  margin-bottom: 12px;
-  padding-top: 40px;
-} */
 
 .modal-paragraph {
   margin-top: 46px;
@@ -967,6 +962,9 @@ textarea {
   color: var(--white-hero-color);
   text-transform: uppercase;
 }
+.join {
+  margin-right: 93px;
+}
 
 .join-size {
   width: 20px;
@@ -1004,14 +1002,16 @@ textarea {
 .ttl-flex {
   display: flex;
   align-items: baseline;
+  width: 100%;
 
-  margin-right: auto;
+  /* margin-right: auto; */
   padding: 0;
   margin: 0;
 }
 
 .footer-flex {
   margin-right: 70px;
+  width: 231px;
 }
 
 .join-margin {
@@ -1025,17 +1025,61 @@ textarea {
 /* Подписаться на рассылку */
 
 .mailing-form {
+  padding: 15px 0 15px 16px;
+  margin-right: 12px;
   width: 358px;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.25;
   align-items: center;
   color: var(--transparent-gray);
+  background-color: var(--secondary-bgc-gray);
+
+  border: 1px solid var(--border-mailing-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 
 .mailing-flex {
   display: flex;
-  flex-direction: column;
+  margin-top: 20px;
+}
+
+.mailing-main {
+  width: 570px;
+  height: 86px;
+}
+
+.button-mailing {
+  display: flex;
+  justify-content: center;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  padding-right: 28px;
+  width: 200px;
+  height: 50px;
+
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  background-color: var(--accent-color);
+  color: var(--white-hero-color);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  border-style: none;
+  outline: none;
+}
+
+.icon-mailing {
+  margin-left: 10px;
 }
 
 /* geometry styles */
