--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,17 @@ a {
   cursor: pointer;
 }
 
+.close-color {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
+.close-color:hover,
+.close-color:focus {
+  fill: var(--accent-color);
+}
+
 .modal-thumb {
   width: 100%;
   height: 100%;
@@ -306,14 +317,41 @@ a {
 }
 
 .field-form {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 
+.field-form:last-child {
+  margin-bottom: 0;
+}
+
+.border-form {
+  line-height: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
+.name-form {
+  position: absolute;
+  top: 60%;
+  left: 15px;
+  transform: translateY(-30%);
+  display: inline-block;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
 .field-form label {
   margin-bottom: 4px;
-
   font-weight: normal;
   font-size: 12px;
   line-height: 1.16;
@@ -344,6 +382,24 @@ a {
 
 textarea {
   resize: none;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
+}
+
+.field-form:focus-within > .border-form {
+  border-color: var(--accent-color);
+  outline: transparent;
+}
+
+.field-form:focus-within > .name-form {
+  fill: var(--accent-color);
+}
+
+.field-form:focus-within > textarea {
+  border-color: var(--accent-color);
+  outline: transparent;
 }
 
 .button-container {
@@ -382,6 +438,46 @@ textarea {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
+}
+
+.agreement-body {
+  color: var(--accent-color);
+  text-decoration: underline;
+  margin-left: 5px;
+}
+
+.checkbox {
+  appearance: none;
+  position: absolute;
+}
+
+.check-mark::before {
+  content: '';
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 2px;
+  margin-right: 7px;
+
+  background-color: var(--white-hero-color);
+
+  transition-property: background-color, border-color;
+  transition-duration: 250ms, 250ms;
+  transition-timing-function: var(--timing-function), var(--timing-function);
+}
+
+.checkbox:checked + .check-mark::before {
+  background-color: var(--accent-color);
+  background-image: url(../imagesoptimized/icon\ check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent-color);
+}
+
+.check-mark {
+  display: flex;
+  align-items: center;
 }
 
 /* main container for all project */
