--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  /* overflow: hidden; */
 }
 
 /* подчеркивание */
@@ -317,7 +318,7 @@ a {
 }
 
 .field-form {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -332,17 +333,20 @@ a {
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 42px;
+  width: 100%;
+}
 
-  transition-property: border-color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-function);
+.position-form {
+  position: relative;
+  display: block;
+  width: 448px;
 }
 
 .name-form {
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 15px;
-  transform: translateY(-30%);
+  transform: translateY(-50%);
   display: inline-block;
 
   transition-property: fill;
@@ -359,10 +363,14 @@ a {
   color: var(--secondary-text-color);
 }
 
-.field-form input {
+.position-form input {
   margin: 0;
   border-radius: 4px;
   border: 1px solid var(--form-border-color);
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .field-form textarea {
@@ -388,12 +396,12 @@ textarea {
   transition-timing-function: var(--timing-function);
 }
 
-.field-form:focus-within > .border-form {
+.position-form:focus-within > .border-form {
   border-color: var(--accent-color);
   outline: transparent;
 }
 
-.field-form:focus-within > .name-form {
+.position-form:focus-within > .name-form {
   fill: var(--accent-color);
 }
 
@@ -693,15 +701,12 @@ textarea {
   color: var(--white-hero-color);
 }
 
-.before-skills::before {
-  content: '';
+.thumb-skills {
   position: absolute;
-
   bottom: 0;
   left: 0;
   width: 100%;
   height: 70px;
-
   background-color: var(--skills-bgc-position);
 }
 
@@ -959,6 +964,7 @@ textarea {
 
 .card-content {
   padding: 20px 24px;
+  height: 110px;
   border-right: 1px solid var(--portfolio-border);
   border-bottom: 1px solid var(--portfolio-border);
   border-left: 1px solid var(--portfolio-border);
@@ -989,10 +995,10 @@ textarea {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
+  top: 100%;
   left: 0;
   background-color: var(--thumb-overlay-color);
-  transform: translateY(100%);
+  transform: translateY(0);
 
   transition-property: transform;
   transition-duration: 250ms;
@@ -1001,7 +1007,7 @@ textarea {
 
 .table-block:hover .overlay-transform,
 .table-block:focus .overlay-transform {
-  transform: translateY(0);
+  transform: translateY(-100%);
 }
 
 /* footer */
