--- a/css/styles.css
+++ b/css/styles.css
@@ -300,16 +300,17 @@ a {
   fill: var(--accent-color);
 }
 
+.modal-form {
+  padding: 46px 40px 35px 40px;
+}
+
 .modal-thumb {
   width: 100%;
   height: 100%;
-  padding-left: 40px;
-  padding-right: 40px;
-  margin-bottom: 20px;
 }
 
 .modal-paragraph {
-  margin-top: 46px;
+  margin-top: 0;
   margin-bottom: 12px;
   font-weight: bold;
   font-size: 20px;
@@ -318,14 +319,9 @@ a {
 }
 
 .field-form {
-  /* position: relative; */
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-}
-
-.field-form:last-child {
-  margin-bottom: 0;
 }
 
 .border-form {
@@ -339,7 +335,7 @@ a {
 .position-form {
   position: relative;
   display: block;
-  width: 448px;
+  width: 100%;
 }
 
 .name-form {
@@ -437,9 +433,13 @@ textarea {
 
 .agreement-box {
   margin: 0;
-  margin-bottom: 30px;
-  padding-left: 54px;
-  padding-right: 51px;
+  margin-bottom: 32px;
+  width: 425px;
+  margin-right: auto;
+  margin-left: auto;
+
+  /* padding-left: 54px;
+  padding-right: 51px; */
 }
 
 .agreement-box label {
@@ -451,6 +451,7 @@ textarea {
 .agreement-body {
   color: var(--accent-color);
   text-decoration: underline;
+  /* border-bottom: 1px solid var(--accent-color); */
   margin-left: 5px;
   cursor: pointer;
 }
@@ -684,13 +685,11 @@ textarea {
 }
 
 .project-skills {
-  position: absolute;
-
-  bottom: 0;
-  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 70px;
   width: 100%;
-  padding: 27px 0;
   margin: 0;
 
   font-weight: bold;
@@ -743,13 +742,15 @@ textarea {
 
 .team-content {
   padding-top: 30px;
-  padding-bottom: 16px;
+  padding-bottom: 30px;
+  height: 168px;
 
   border-radius: 4px;
 }
 
 .proffesion {
   font-weight: normal;
+  margin-bottom: 16px;
 }
 
 .network-flex {
